--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,7 +9,8 @@
 <body>
 	<form>	
 		<br><br><br><br><br>
-		<input type="text" name="t2" placeholder="username" ><br><br>
+		<input type="text" name="t2" placeholder="username" onkeypress="return (event.charCode > 64 && 
+    event.charCode < 91) || (event.charCode > 96 && event.charCode < 123)" ><br><br>
 		<input type="password" name="t4" placeholder="Enter Your password" ><br><br>
 		<input type="button" value="Login" class="login"> 
 	</form>
